# lambdasee

./: .gitignore  Cargo.toml  LICENSE  deploy.sh  flake.nix  lambdasee.cabal
app/: Main.hs
src/: deriver.rs  expr.rs  grammar.pest  main.rs  parser.rs
src/html/: index.css  index.html  index.js  prism.js
