[package]
name = "lambdasee"
edition = "2021"
version = "0.0.1"

[dependencies]
lazy_static = "1.4.0"
pest = "2.6"
pest_derive = "2.6"
rocket = "0.5.0"
thiserror = "1.0.56"

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
enum_glob_use = "deny"
pedantic = "deny"
nursery = "deny"
unwrap_used = "deny"
